TEST_PROGRAMS/INVALID/armin_taheri/invalid7.min
#no lone identifier

var x:int;

x;
